log
Fri, Mar 28, 2025 11:36:36 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025 11:41:52 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1eb5fe7
Fri, Mar 28, 2025 11:43:30 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
6ca4e92
Fri, Mar 28, 2025 11:51:42 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e0bd532
Fri, Mar 28, 2025 11:52:18 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:45:12: error: incompatible types when returning type 'Node {aka struct Node}' but 'void *' was expected
     return *(list->head);
            ^~~~~~~~~~~~~
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
762d3a4
Fri, Mar 28, 2025 11:52:36 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cd6d790
